# code-readability-classifier

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile-GPU  Dockerfile-GPU-2  Dockerfile-GPU-3  Dockerfile-min  Dockerfile-test  Dockerfile2  Dockerfile5Raw  Makefile  README.adoc  docker-compose.yml  podman-compose.yml  predict.sh  pyproject.toml  requirements.txt  requirements_win.txt  requirements_win_tf.txt  run_podman_container.sh  train.sh  variables.env
models/: towards.h5
res/datasets/combined/: data-00000-of-00001.arrow  state.json
res/datasets/encoded/: data-00000-of-00001.arrow  state.json
scripts/: cuda-checker.sh  encode.sh  help.sh  predict.sh  run_podman_container.sh  train.sh
src/readability_classifier/: main.py  model_buider.py  model_runner.py  model_runner_interface.py
src/readability_classifier/data_loaders/: dataset-combiner.py  dataset-converter.py  dataset-creator.py  dataset_combiner.py  dataset_converter.py  dataset_loader.py
src/readability_classifier/encoders/: bert_encoder.py  dataset_encoder.py  dataset_utils.py  image_encoder.py  matrix_encoder.py
src/readability_classifier/keas/: __init__.py  classifier.py  history_processing.py  keras_model_runner.py  legacy_encoders.py  model.py  model_runner.py
src/readability_classifier/keras/: classifier.py  history_processing.py  keras_model_runner.py  legacy_encoders.py  model.py
src/readability_classifier/models/: base_classifier.py  base_model.py  classifier.py  fc_model.py  model.py  model2.py  model_keras.py  readability_model.py  semantic_classifier.py  semantic_extractor.py  semantic_model.py  structural_classifier.py  structural_extractor.py  structural_model.py  towards_classifier.py  towards_model.py  vi_st_classifier.py  vi_st_model.py  visual_classifier.py  visual_extractor.py  visual_model.py
src/readability_classifier/models/encoders/: bert_encoder.py  dataset_encoder.py  dataset_utils.py  image_encoder.py  matrix_encoder.py
src/readability_classifier/models/extractors/: semantic_extractor.py  semantic_extractor_krod.py  semantic_extractor_own.py  structural_extractor.py  visual_extractor.py
src/readability_classifier/toch/: __init__.py  base_classifier.py  base_model.py  fc_model.py  model_buider.py  model_runner.py  semantic_classifier.py  semantic_model.py  structural_classifier.py  towards_classifier.py  towards_model.py  vi_st_classifier.py  visual_classifier.py
src/readability_classifier/toch/extractors/: semantic_extractor.py  semantic_extractor_krod.py  semantic_extractor_own.py  structural_extractor.py  visual_extractor.py
src/readability_classifier/toch/models/: semantic_classifier.py  structural_classifier.py  structural_model.py  vi_st_classifier.py  vi_st_model.py  visual_classifier.py  visual_model.py
src/readability_classifier/utils/: bert_demo_encoder.py  config.py  cuda-checker.py  strucutral.py  utils.py  visual.py
src/res/css/: default.css  towards.css  towards_high_quality.css  towards_small.css
src/res/keras/history/: legacy_history.pkl
src/res/models/: bertembedding.yaml  semanticextractor.yaml  semanticmodel.yaml  structuralmodel.yaml  towardsmodel.yaml  visualmodel.yaml
tests/: model.py
tests/readability_classifier/: test_main.py  test_model.py
tests/readability_classifier/data_loaders/: dataset_converter_test.py
tests/readability_classifier/encoders/: test_bert_encoder.py  test_dataset_encoder.py  test_dataset_utils.py  test_image_encoder.py  test_matrix_encoder.py
tests/readability_classifier/keas/: test_classifier.py  test_history_processing.py  test_model.py  test_model_runner.py
tests/readability_classifier/keras/: classifier_test.py  history_processing_test.py  test_classifier.py  test_history_processing.py  test_model.py  test_model_runner.py
tests/readability_classifier/models/: base_classifier_test.py  classifier_test.py  model_test.py  readability_model_test.py  semantic_extractor_test.py  structural_classifier_test.py  structural_extractor_test.py  structural_model_test.py  test_base_classifier.py  test_structural_classifier.py  test_structural_model.py  test_towards_classifier.py  test_towards_model.py  towards_classifier_test.py  towards_mode_test.py  towards_model_test.py  visual_extractor_test.py
tests/readability_classifier/models/encoders/: bert_encoder_test.py  dataset_encoder_test.py  dataset_utils_test.py  image_encoder_test.py  matrix_encoder_test.py  test_bert_encoder.py  test_dataset_encoder.py  test_dataset_utils.py  test_image_encoder.py  test_matrix_encoder.py
tests/readability_classifier/models/extractors/: semantic_extractor_test.py  structural_extractor_test.py  test_semantic_extractor.py  test_structural_extractor.py  test_visual_extractor.py  visual_extractor_test.py
tests/readability_classifier/toch/: test_base_classifier.py  test_structural_classifier.py  test_structural_model.py  test_towards_classifier.py  test_towards_model.py
tests/readability_classifier/toch/extractors/: test_semantic_extractor.py  test_structural_extractor.py  test_visual_extractor.py
tests/readability_classifier/toch/models/: test_structural_classifier.py  test_structural_model.py
tests/readability_classifier/utils/: structural_test.py  utils.py  visual_test.py
tests/res/code_snippets/: towards.java
tests/res/encoded_datasets/bw/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/res/encoded_datasets/combined/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/res/encoded_datasets/dorn/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/res/encoded_datasets/scalabrio/: data-00000-of-00001.arrow  state.json
tests/res/history/: history.pkl  stats.json
tests/res/keras/history/: processed_legacy_history.json
tests/res/models/: towards.h5  towards.keras
tests/res/raw_data/bw/: scores.csv
tests/res/raw_data/dorn/: scores.csv
tests/res/raw_data/scalabrio/: scores.csv
tests/res/raw_datasets/bw/: data-00000-of-00001.arrow  state.json
tests/res/raw_datasets/dorn/: state.json  (+2 more)
(+95 files in other folders)
